[gd_scene load_steps=2 format=3 uid="uid://eavyhq4xtcu6"]

[ext_resource type="Script" path="res://UI/objective_panel.gd" id="1_xiv1h"]

[node name="ObjectivePanel" type="Panel"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = -1
anchor_right = 0.174
anchor_bottom = 0.231
offset_right = -0.448013
offset_bottom = -49.688
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_xiv1h")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -42.0
offset_right = 23.5
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
text = "Name"

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -15.0
offset_right = 47.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "Description"

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = 14.0
offset_right = 78.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2

[node name="CompletionLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -467.0
offset_top = -49.0
offset_right = -427.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
text = "false"
